Closed Bug 159646 Opened 22 years ago Closed 22 years ago

Plugin scriptable samples may crash due to stale pointer

Categories

(Core Graveyard :: Plug-ins, defect, P3)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: serhunt, Assigned: serhunt)

Details

(Whiteboard: [PL2:NA])

Attachments

(1 file)

http://lxr.mozilla.org/seamonkey/source/modules/plugin/tools/sdk/

The Simple and the Scriptable samples use non-refcounted object |mPlugin| in
their scriptable methods. The object represents the plugin instance which may
get deleted while the scriptable object is still held by the browser. One way of
fixing this is to set it to null in the plugin instance destructor.
Attached patch patch v.1Splinter Review
Please look at it. I think we can check this in not worrying about reviews and
approvals since this is not part of the build yet.
Priority: -- → P3
Whiteboard: [PL2:NA]
Target Milestone: --- → mozilla1.2alpha
Whiteboard: [PL2:NA] → [PL2:NA][ready to check in]
Comment on attachment 92965 [details] [diff] [review]
patch v.1

r=serge
Attachment #92965 - Flags: review+
In the trunk.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Whiteboard: [PL2:NA][ready to check in] → [PL2:NA]
.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: