Bug 159646 -- taking care of stale pointer in the plugin sample code, not part of the build