modules/plugin/tools/sdk/samples/simple/plugin.cpp
@@ -118,6 +118,11 @@ nsPluginInstance::nsPluginInstance(NPP aInstance) : nsPluginInstanceBase(),
 
 nsPluginInstance::~nsPluginInstance()
 {
+  // mScriptablePeer may be also held by the browser 
+  // so releasing it here does not guarantee that it is over
+  // we should take precaution in case it will be called later
+  // and zero its mPlugin member
+  mScriptablePeer->SetInstance(NULL);
   NS_IF_RELEASE(mScriptablePeer);
 }
 
@@ -222,7 +227,7 @@ NPError	nsPluginInstance::GetValue(NPPVariable aVariable, void *aValue)
 // ==============================
 //
 // this method will return the scriptable object (and create it if necessary)
-nsISimplePlugin* nsPluginInstance::getScriptablePeer()
+nsScriptablePeer* nsPluginInstance::getScriptablePeer()
 {
   if (!mScriptablePeer) {
     mScriptablePeer = new nsScriptablePeer(this);
@@ -235,6 +240,4 @@ nsISimplePlugin* nsPluginInstance::getScriptablePeer()
   // add reference for the caller requesting the object
   NS_ADDREF(mScriptablePeer);
   return mScriptablePeer;
-
-  return NULL;
 }
